# elden-ring-tracker

./: .gitattributes  .gitignore  CHANGELOG.md  Elden_ring_research.md  GOLDEN_PATHS.md  LEGAL.md  Makefile  QUEST_TRACKING_RESEARCH.md  README.md  SPRINTS_FUTUROS.md  context.md  elden-ring-tracker.desktop  install.sh  install_upscale.sh  pyproject.toml  requirements-upscale.txt  requirements.txt  run.sh  setup.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
data/: calibration_points.json  config.json  eventflag_bst.txt
data/patches/: dungeons.json  npc_invaders.json
data/references/: achievements.json  armor_slots.json  (+22 more)
debian/: changelog  control  copyright  postinst  prerm  rules
docs/: database.md
scripts/: apply_patches.py  audit_dungeons.py  cleanup_graces.py  diagnose_block7.py  diagnose_flags.py  download_tiles.py  enrich_references.py  enrich_subcategories.py  expand_item_ids.py  fetch_item_images.py  fetch_utils.py  import_dataset.py  import_goods_ids.py  install_desktop.sh  integrate_dlc_graces.py  integrate_npc_dead_flags.py  integrate_remaining_bosses.py  integrate_sprint1_bosses.py  integrate_story_flags.py  link_dungeon_boss_flags.py  link_npc_graces.py  map_invader_boss_flags.py  stitch_tiles.py  validate_references.py
src/: achievement_resolver.py  calibration.py  dashboard.py  database.py  event_flags.py  generate_icons.py  inventory_parser.py  log.py  map_config.py  map_renderer.py  missable_checker.py  progress_tracker.py  recalibrate.py  save_parser.py  subcategory_resolver.py  tray.py  upscale_maps.py
(+11 files in other folders)
