[project]
name = "GraceMap"
version = "1.0.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/dashboard.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "dashboard",
    "database",
    "log",
    "map_config",
    "map_renderer",
    "save_parser",
    "event_flags",
    "inventory_parser",
    "progress_tracker",
    "achievement_resolver",
    "missable_checker",
    "generate_icons",
    "tabs",
    "tray",
]
